--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,11 @@ chrono = "0.4"
 lazy_static = "1.0"
 bytesize = "0.1"
 libc = "0.2"
+serde = { version = "1.0", optional = true }
+# serde_derive = { version = "1.0", optional = true }
+
+# [features]
+# serialization = ["serde", "serde_derive"]
 
 [target.'cfg(target_os = "linux")'.dependencies]
 nom = "3.2"
