--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ chrono = "0.4"
 lazy_static = "1.0"
 bytesize = "0.1"
 libc = "0.2"
-serde = { version = "1.0", optional = true }
+serde = { version = "1.0", optional = true, features = ["derive"] }
 # serde_derive = { version = "1.0", optional = true }
 
 # [features]
